--- a/6.6.1html+text.html
+++ b/6.6.1html+text.html
@@ -6,24 +6,19 @@
 	<script src="6.6kquery.js"></script>
 	<script type="text/javascript">
 		$(function(){
-			//console.log($('li').html());
-			//不填写传回去innerhtml内容
+			// console.log($('li').html());
+			// 不填写传回去innerhtml内容
 
-			//console.log($('li').html('hhh'));
+			// console.log($('li').html('hhh'));//返回jq对象
 			// console.log($('li').html('<p>hhhhh</p>'));
 
 
 
 
 			console.log($('li').text());
-			//返回文本
-
-
-
-
+			//返回文本。。。拼接所有的文本
 
 			//未完成
-
 			console.log($('li').text('hhhhh'));
 			console.log($('li').text('<p>hhhhh</p>'));
 			//返回jquery对象
